# lightroom-preset-converter

./: LICENSE.txt  README.md  pyproject.toml  teste.pp3
assets/: README.md  example_template.lrtemplate
assets/lightroom-presets/: example-preset1.xmp  example-preset2.xmp  example-preset3.xmp  example-preset4.xmp  only-temperature.xmp
assets/lightroom-presets/lrtemplates-examples/: README.md
assets/rawtherapee-presets/: IMG_7761.CR2.pp3  IMG_7761.JPG.out.pp3  IMG_7922.jpg.out.pp3  IMG_7938.CR2.pp3  IMG_7973.jpg.out.pp3  IMG_8009.jpg.out.pp3  IMG_8013.jpg.out.pp3  IMG_8016.jpg.out.pp3  IMG_8022.jpg.out.pp3  IMG_8023.jpg.out.pp3  IMG_8037.jpg.out.pp3
scripts/: extract_toml_keys.py  print_rt_keys.py
src/: convert.py  convert_to_rt.py  lr_mapping.py  lr_to_rt_mapping.py  parse_values.py  read_lrtemplate.py  read_xmp.py
src/mappings/: lr_mapping.py  lr_to_rt_mapping.py  rt_mapping.py
src/utils/: parsing.py  scale.py
